@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
+DIST xfdesktop-4.5.92.tar.bz2 3098257 RMD160 44dc97f747bb1d986b63c3d66b19fc49047ba567 SHA1 733617ac126669526cc7c89534203d34c17ee745 SHA256 3802a71048fb24ee688bdbbedcc1c96b05ce57b737a6a442ae31c1805e18e91a
+EBUILD xfdesktop-4.5.92.ebuild 1805 RMD160 217ccfe04525ea907861bbcf116c891ee99a92cb SHA1 e95b991595311516c5d7346fff00b0a5662973f0 SHA256 25dd1f64e1c8cf69a9732c8f3b77e15eae0f1161816b518add1a0b7f2db299f1
 EBUILD xfdesktop-9999.ebuild 1823 RMD160 a3856b45d323e77a44f51d3647a213fba25fb832 SHA1 f7fe83233ee469a675fff1938da73630565a362e SHA256 79375cd6462940e0f3173629cdbc03616a4386ddacace3d0fac2f433da4c036a
-MISC ChangeLog 1313 RMD160 1921af056e3724c129733def92e232c73903515e SHA1 29863c795fbb33a9278fea90cf02863f60ce883c SHA256 d1903b49148186044aea3737154c28130ea4acc04bd2889788658a4f43347f0e
+MISC ChangeLog 1450 RMD160 af3a91d5c06e2bb15c627364786213e57ee7ab97 SHA1 b4a0ed94507e9fd6a22a28865361e0fc11d63338 SHA256 bf14694bdcad77227804c84297853f7631a7862054a4a2c8e19df0fe5846f705
 MISC metadata.xml 351 RMD160 4401cf2e2c9cc9f166bdff78a1e15612e784ad1d SHA1 dc6b0946171dda265a9b13871899a9a8e071f6db SHA256 f2a98defe794e66d32ba0f9041a7b0afb7209345974f114ee2b8454dbe4bc6e9
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXg3QACgkQKhnDs22gwa8wYgCg7SK8Fi949/6DFao1SMizT1nN
-Gt0An3C4YjvJSGiMEHUAqAKev+jjeJI9
-=cPI/
+iEYEARECAAYFAkkdtmgACgkQKhnDs22gwa9FawCeOl/O5Wcmo2vRloPLGYjr7tKU
+V/8AoOYkorVBJhaWfC9GF6RTR12lrMMo
+=Pwpe
 -----END PGP SIGNATURE-----
